# argos3

src/plugins/robots/: CMakeLists.txt
src/plugins/robots/crazyflie/: CMakeLists.txt
src/plugins/robots/crazyflie/control_interface/: ci_crazyflie_distance_scanner_actuator.cpp  ci_crazyflie_distance_scanner_actuator.h  ci_crazyflie_distance_scanner_sensor.cpp  ci_crazyflie_distance_scanner_sensor.h
src/plugins/robots/crazyflie/simulator/: crazyflie_distance_scanner_default_actuator.cpp  crazyflie_distance_scanner_default_actuator.h  crazyflie_distance_scanner_equipped_entity.cpp  crazyflie_distance_scanner_equipped_entity.h  crazyflie_distance_scanner_rotzonly_sensor.cpp  crazyflie_distance_scanner_rotzonly_sensor.h  crazyflie_entity.cpp  crazyflie_entity.h  pointmass3d_crazyflie_model.cpp  pointmass3d_crazyflie_model.h  qtopengl_crazyflie.cpp  qtopengl_crazyflie.h
src/plugins/robots/spiri/: CMakeLists.txt
src/plugins/robots/spiri/control_interface/: ci_spiri_distance_scanner_actuator.cpp  ci_spiri_distance_scanner_actuator.h  ci_spiri_distance_scanner_sensor.cpp  ci_spiri_distance_scanner_sensor.h  ci_spiri_proximity_sensor.cpp  ci_spiri_proximity_sensor.h
src/plugins/robots/spiri/simulator/: qtopengl_spiri.cpp  spiri_distance_scanner_default_actuator.cpp  spiri_distance_scanner_default_actuator.h  spiri_distance_scanner_equipped_entity.cpp  spiri_distance_scanner_equipped_entity.h  spiri_distance_scanner_rotzonly_sensor.cpp  spiri_distance_scanner_rotzonly_sensor.h  spiri_entity.cpp  spiri_entity.h  spiri_proximity_default_sensor.cpp  spiri_proximity_default_sensor.h
src/plugins/simulator/physics_engines/dynamics3d/: dynamics3d_magnetism_plugin.h
src/plugins/simulator/physics_engines/pointmass3d/: pointmass3d_quadrotor_model.cpp
src/plugins/simulator/visualizations/qt-opengl/: qtopengl_obj_model.cpp
